supplemental ext-fig

--- a/Manuscript/FinalDraft_rev/ReviewResponses.tex
+++ b/Manuscript/FinalDraft_rev/ReviewResponses.tex
@@ -43,6 +43,8 @@
 
 \opening{To the editorial committee,}
 
+We thank both the Reviewers for their insightful comments and criticisms. Below, we address each one, point by point. We believe that the edits that we have made have increased the clarity of our contribution, in no small part due to the thought and detail exercised by the Reviewers. We hope that our responses satisfy the concerns listed below. Please do not hesitate to contact us if there are additional clarifications required.
+
 \setstretch{1.2}
 
 \section*{Reviewer I}
