peter edits integrated

--- a/Manuscript/FinalDraft_rev/ReviewResponses.tex
+++ b/Manuscript/FinalDraft_rev/ReviewResponses.tex
@@ -75,10 +75,10 @@ We note that the derivative is dependent on both $\mu_i$ and $\mu_j$ due to the 
 \noindent {\bf Response 1.2} We are thankful for the Reviewer in pointing out this reference, which we are embarrassed to admit to having overlooked. The model indeed has many similarities to our own, and we now acknowledge its importance and priority within the manuscript. The similarities in the resulting dynamics suggest that what we are observing in the two-population salmon system, as well as the implications that we derive for metapopulation robustness and recovery, may be  relevant and illustrative of a general phenomenon outside of the constraints introduced in the specific formulation of our model. Though as Reviewer I notes, our model while complementary to Ronce and Kirkpatrick 2001, focuses instead on the metapopulation effects (portfolio effects, resilience, and overall robustness) of the observed dynamics rather than a detailed analytical treatment of the dynamics themselves. We highlight areas of complementarity and extension in the revised manuscript.
 
 \noindent We have made the following edits to the text:\\
-\noindent {\bf Line 115:} \emph{This model formulation has parallels to that proposed by Ronce and Kirkpatrick [ref]), where habitat specialization evolves between two populations as a function of dispersal.
-The largest difference between these approaches is that our framework treats trait evolution mechanistically (at some cost to analytical tractability).
-Importantly, we show that the resulting dynamics are qualitatively similar, suggesting that the dynamical features present in both of these approaches have potentially widespread ramifications for the evolutionary dynamics of connected populations.}\\
+\noindent {\bf Line 115:} \emph{This model formulation has parallels to that proposed by Ronce and Kirkpatrick [ref], where habitat specialization evolves between two populations as a function of dispersal, yet differs in that we treat trait evolution mechanistically at some cost to analytical tractability.}\\
 \noindent {\bf Line 191} \emph{These dynamics are also observed in the Ronce and Kirkpatrick model, which they describe as a transition from symmetric to asymmetric states [ref].}
+\noindent {\bf Line XXX} \emph{A salient finding from our results is that straying can lead to the emergence of alternative stable states, pushing one of the populations to high density (the \emph{dominant state}), and one to low density (the \emph{subordinate state}).
+This pattern has been observed in other models of eco-evolutionary dynamics with explicit space [ref], suggesting that it may be a general feature of spatially-linked populations that evolve toward local optima while being hindered by dispersal.}
 
 
 \noindent \textcolor{cyan}{
@@ -164,7 +164,7 @@ This manuscript can be improved by correcting the bifurcation analysis and by ex
 
 \noindent {\bf Response 2.2} We thank the Reviewer for their perspective and comments, and agree that we need to understand to what extent our results are generalizable.
 % From our perspective, there are two ways in which our model incorporates symmetry: 1) the architectural symmetry of the populations between sites and 2) the symmetry in parameter values between sites. Regarding the first, both populations have the same growth and mortality functions, and both populations have the same functional forms that control straying. This architectural symmetry lies at the heart of our question, as we are exploring the dynamics of two similar populations that have similar constraints. We cannot alter this type of symmetry without vastly changing the questions that we are addressing.
-In general, although discrete cusp bifurcations with pitchfork-like behaviors are a consequence of symmetry (defined by a system where $N_1\rightarrow-N_1$, $N_2\rightarrow-N_2$, $x_1\rightarrow-x_1$, $x_2\rightarrow-x_2$ without altering the equations), the general features of the bifurcation need not be altered as symmetry is broken.
+In general, although discrete cusp bifurcations with pitchfork-like behaviors are a consequence of symmetry (defined by a system where $N_1\rightarrow-N_1$, $N_2\rightarrow-N_2$, $\mu_1\rightarrow-\mu_1$, $\mu_2\rightarrow-\mu_2$ without altering the equations), the general features of the bifurcation need not be altered as symmetry is broken.
 Consider the topological normal form $\dot{x}=h + \beta x - x^3$, which is a continuous system with a perfect pitchfork bifurcation at $\beta = 0,~h=0$.
 It is symmetric in the sense that $x\rightarrow-x$ without altering anything if and only if $h=0$.
 If $h\neq0$, the system is asymmetric, however the pitchfork-like dynamic does not disappear but becomes an imperfect pitchfork where a saddle node bifurcation appears alongside a non-varying steady state.
