--- a/Manuscript/FinalDraft_rev/aa_kevin.bib
+++ b/Manuscript/FinalDraft_rev/aa_kevin.bib
@@ -1,4 +1,4 @@
-%% Created using Papers on Tue, 19 Sep 2017.
+%% Created using Papers on Wed, 20 Sep 2017.
 %% http://papersapp.com/papers/
 
 @article{Anonymous:2015gf,
@@ -489,16 +489,6 @@ pages = {2295--2300},
 month = feb
 }
 
-@article{Ciancio:2008p3440,
-author = {Ciancio, JE and Pascual, MA and Botto, F and Frere, E and Iribarne, O},
-title = {{Trophic relationships of exotic anadromous salmonids in the southern Patagonian Shelf as inferred from stable isotopes}},
-journal = {Limnology and Oceanography},
-year = {2008},
-volume = {53},
-number = {2},
-pages = {788--798}
-}
-
 @article{Yeakel:2013vz,
 author = {Yeakel, Justin D and Moore, J W and Guimar{\~a}es Jr, Paulo R and de Aguiar, M A M},
 title = {{Synchronisation and stability in river metapopulation networks}},
@@ -507,6 +497,16 @@ year = {2014},
 volume = {17},
 number = {3},
 pages = {273--283}
+}
+
+@article{Ciancio:2008p3440,
+author = {Ciancio, JE and Pascual, MA and Botto, F and Frere, E and Iribarne, O},
+title = {{Trophic relationships of exotic anadromous salmonids in the southern Patagonian Shelf as inferred from stable isotopes}},
+journal = {Limnology and Oceanography},
+year = {2008},
+volume = {53},
+number = {2},
+pages = {788--798}
 }
 
 @book{Hanski:1999vu,
@@ -731,6 +731,16 @@ pages = {5761--5766},
 month = apr
 }
 
+@article{Reisenbichler:1988ex,
+author = {Reisenbichler, Reginald R},
+title = {{Relation between Distance Transferred from Natal Stream and Recovery Rate for Hatchery Coho Salmon}},
+journal = {N. Am. J. Fish. Manage.},
+year = {1988},
+volume = {8},
+number = {2},
+pages = {172--174}
+}
+
 @article{Mangel:2008tl,
 author = {Mangel, M and Satterthwaite, W H},
 title = {{Combining proximate and ultimate approaches to understand life history variation in salmonids with application to fisheries, conservation, and aquaculture}},
@@ -773,6 +783,14 @@ number = {1524},
 pages = {1755}
 }
 
+@article{Berdahl:2017uu,
+author = {Berdahl, Andrew},
+title = {{Berdahl et al. contribution}},
+journal = {Philos. T. Roy. Soc. B},
+year = {2017},
+volume = {This volume}
+}
+
 @article{Anonymous:2015ee,
 author = {Schindler, Daniel E and Hilborn, Ray},
 title = {{Sustainability. Prediction, precaution, and policy under global change.}},
@@ -795,15 +813,14 @@ pages = {881--900},
 month = jan
 }
 
-@article{Falcy:2014en,
-author = {Falcy, Matthew R},
-title = {{Density-dependent habitat selection of spawning Chinook salmon: broad-scale evidence and implications}},
-journal = {J. Anim. Ecol.},
-year = {2014},
-volume = {84},
-number = {2},
-pages = {n/a--n/a},
-month = oct
+@article{Young:1999ut,
+author = {Young, Kyle A},
+title = {{Managing the decline of Pacific salmon: metapopulation theory and artificial recolonization as ecological mitigation}},
+journal = {Can. J. Fish. Aquat. Sci.},
+year = {1999},
+volume = {56},
+number = {9},
+pages = {1700--1706}
 }
 
 @article{Quinn:2014bg,
@@ -817,18 +834,19 @@ pages = {1--12},
 month = aug
 }
 
-@article{Young:1999ut,
-author = {Young, Kyle A},
-title = {{Managing the decline of Pacific salmon: metapopulation theory and artificial recolonization as ecological mitigation}},
-journal = {Can. J. Fish. Aquat. Sci.},
-year = {1999},
-volume = {56},
-number = {9},
-pages = {1700--1706}
+@article{Falcy:2014en,
+author = {Falcy, Matthew R},
+title = {{Density-dependent habitat selection of spawning Chinook salmon: broad-scale evidence and implications}},
+journal = {J. Anim. Ecol.},
+year = {2014},
+volume = {84},
+number = {2},
+pages = {n/a--n/a},
+month = oct
 }
 
 @article{Shelton:2014br,
-author = {Shelton, Andrew Olaf and SAMHOURI, JAMEAL F and Stier, Adrian C and Levin, Philip S},
+author = {Shelton, Andrew Olaf and Samhouri, Jameal F and Stier, Adrian C and Levin, Philip S},
 title = {{Assessing trade-offs to inform ecosystem-based fisheries management of forage fish}},
 journal = {Sci. Rep.},
 year = {2014},
@@ -846,6 +864,13 @@ volume = {71},
 number = {7},
 pages = {959--972},
 month = mar
+}
+
+@article{Kuehn:2010tx,
+author = {Kuehn, C. and Siegmund, S. and Gross, T},
+title = {{On the dynamical analysis of evolution equations via generalized models}},
+journal = {Arxiv preprint arXiv:1012.4340},
+year = {2010}
 }
 
 @article{Thompson:2015hq,
@@ -867,13 +892,6 @@ volume = {14},
 number = {9},
 pages = {877--885},
 month = sep
-}
-
-@article{Kuehn:2010tx,
-author = {Kuehn, C. and Siegmund, S. and Gross, T},
-title = {{On the dynamical analysis of evolution equations via generalized models}},
-journal = {Arxiv preprint arXiv:1012.4340},
-year = {2010}
 }
 
 @article{Holling:1973hr,
@@ -1198,17 +1216,6 @@ number = {2},
 pages = {340--347}
 }
 
-@article{Fussmann:2007fo,
-author = {Fussmann, G. F. and Loreau, M and Abrams, P. A.},
-title = {{Eco-Evolutionary Dynamics of Communities and Ecosystems}},
-journal = {Funct. Ecol.},
-year = {2007},
-volume = {21},
-number = {3},
-pages = {465--477},
-month = jun
-}
-
 @article{Wang:2014ec,
 author = {Wang, Shaopeng and Loreau, Michel},
 title = {{Ecosystem stability in space: $\alpha$, $\beta$ and $\gamma$ variability}},
@@ -1218,6 +1225,17 @@ volume = {17},
 number = {8},
 pages = {891--901},
 month = may
+}
+
+@article{Fussmann:2007fo,
+author = {Fussmann, G. F. and Loreau, M and Abrams, P. A.},
+title = {{Eco-Evolutionary Dynamics of Communities and Ecosystems}},
+journal = {Funct. Ecol.},
+year = {2007},
+volume = {21},
+number = {3},
+pages = {465--477},
+month = jun
 }
 
 @article{AndersonMay86,
@@ -1779,6 +1797,14 @@ pages = {20170768},
 month = may
 }
 
+@article{HardestyMoore:wg,
+author = {Hardesty-Moore, Molly and Deinet, Stefanie and Freeman, Robin and Titcomb, Georgia C and Dillon, Erin M and Stears, Keenan and Klope, Maggie and Bui, An and Orr, Devyn and Young, Hillary S and Miller-ter Kuile, Ana and Hughey, Lacey F and McCauley, Douglas},
+title = {{Migration in the Anthropocene}},
+journal = {Philos. T. Roy. Soc. B},
+year = {2017},
+volume = {This volume}
+}
+
 @article{Schindler:2010he,
 author = {Schindler, Daniel E and Hilborn, Ray and Chasco, Brandon and Boatright, Christopher P and Quinn, Thomas P and Rogers, Lauren A and Webster, Michael S},
 title = {{Population diversity and the portfolio effect in an exploited species}},
@@ -1943,6 +1969,17 @@ volume = {60},
 number = {9},
 pages = {1057--1067},
 month = sep
+}
+
+@article{Fraser:2011co,
+author = {Fraser, D J and Weir, L K and Bernatchez, L and Hansen, M M and Taylor, E B},
+title = {{Extent and scale of local adaptation in salmonid fishes: review and meta-analysis.}},
+journal = {Heredity},
+year = {2011},
+volume = {106},
+number = {3},
+pages = {404--420},
+month = mar
 }
 
 @article{Taylor:1996uz,
