--- a/Manuscript/FinalDraft_rev/supp.tex
+++ b/Manuscript/FinalDraft_rev/supp.tex
@@ -60,7 +60,7 @@
 % \Blindtext
 %\title{Simple rules yield complex communities: deconstructed species interactions and the assembly of communities}
 %\title{Community assembly and dynamics by the deconstruction of species interactions}
-\title{Supplementary Figures: Eco-evolutionary dynamics and collective migration: implications for salmon metapopulation robustness}
+\title{Supplementary Figures: Eco-evolutionary dynamics and collective dispersal: implications for salmon metapopulation robustness}
 \author{
 Justin D. Yeakel${}^{1,2,*}$, Jean P. Gibert${}^{1}$, Peter A. H. Westley${}^{3}$, \& Jonathan W. Moore${}^{4}$ \\
 ${}^1$School of Natural Sciences, University of California, Merced, Merced CA, USA \\
